Edited default static pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,11 @@
 </head>
 <body>
 
+<header><h1>smswall</h1></header>
+
 <%= yield %>
+
+<footer><%= link_to "@mitchwd", "http://www.twitter.com/mitchwd", target: "_blank" %></footer>
 
 </body>
 </html>
