--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Static#about</h1>
-<p>Find me in app/views/static/about.html.erb</p>
+<h1>About smswall</h1>
+<p>smswall was made by <%= link_to "@mitchwd", "http://www.twitter.com/mitchwd", target: "_blank" %> at <%= link_to "mitchwd.com", "http://www.mitchwd.com", target: "_blank" %>.</p>
