--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Static#index</h1>
-<p>Find me in app/views/static/index.html.erb</p>
+<h1>Welcome to smswall!</h1>
+<p>This project is still well in development- but take a look around!</p>
+
+<%= link_to "About smswall", action: "about" %>
