Added new message path

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing messages</h1>
 
+<%= link_to "New Message", new_message_path %>
+
 <table>
   <thead>
     <tr>
@@ -30,3 +32,5 @@
     <% end %>
   </tbody>
 </table>
+
+<%= link_to "New Message", new_message_path %>
