Add retweet kind (Close #6)
Close #6

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -24,7 +24,7 @@
   </div>
   <div class="field">
   	<%= f.label :kind %><br />
-  	<%= f.select(:kind, options_for_select([['SMS','sms'],['Tweet','tweet'],['Announcement','announcement']])) %>
+  	<%= f.select(:kind, options_for_select([['SMS','sms'],['Tweet','tweet'],['Retweet','retweet'],['Announcement','announcement']])) %>
   </div>
   <div class="field">
     <%= f.label :author %><br />
